--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
 .App {
   text-align: center;
 }
-
+.ant-layout-header {
+  height: 400px;
+  padding: 0 50px;
+  line-height: 64px;
+  background: #ffffff;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
